utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/Regulatory_Framework__mdt.object-meta.xml
<CustomObject>
    <label>Regulatory Framework</label>
    <pluralLabel>Regulatory Frameworks</pluralLabel>
</CustomObject>