utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Adequacy_Decision__c.field-meta.xml
<CustomField>
    <fullName>Adequacy_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adequacy Decision</label>
    <type>Checkbox</type>
</CustomField>