utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Adequacy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Adequacy_Notes__c</fullName>
    <label>Adequacy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>