utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>VERIFIED</fullName><default>false</default><label>VERIFIED</label></value>
            <value><fullName>INFERRED</fullName><default>false</default><label>INFERRED</label></value>
            <value><fullName>NEEDS_REVIEW</fullName><default>false</default><label>NEEDS_REVIEW</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>