utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>