utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Cross_Border_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border_Transfer__c</fullName>
    <label>Cross Border Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>