utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Government_Certification__c.field-meta.xml
<CustomField>
    <fullName>Government_Certification__c</fullName>
    <label>Government Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>