utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>