utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Primary_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Regulation__c</fullName>
    <label>Primary Regulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>