utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Secondary_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Regulations__c</fullName>
    <label>Secondary Regulations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>