utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Date__c</fullName>
    <label>Source Date</label>
    <type>Date</type>
</CustomField>