utopia-project/force-app/main/default/objects/Regulatory_Framework__mdt/fields/Source_Doc__c.field-meta.xml
<CustomField>
    <fullName>Source_Doc__c</fullName>
    <label>Source Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>